# rag

./: .gitignore  ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md  mcp-config.json
examples/: advanced_vector_store.rs  batch_search.rs  distance_metrics.rs  ingest_codebase.rs  ingest_pdf.rs  ingest_wiki.rs  mcp_example.rs  minimal_vector_db.rs  pure_memory_rag.rs  simple_rag.rs
src/: chunker.rs  embeddings.rs  errors.rs  index.rs  ingestion.rs  lib.rs  main.rs  mcp.rs  mcp_server.rs  retriever.rs  vector_store.rs
tests/: example_behavior_test.rs  integration_test.rs  vector_store_test.rs
