[package]
name = "rag"
version = "0.1.0"
edition = "2024"
description = "A Rust library and CLI for Retrieval-Augmented Generation"
license = "Apache-2.0"
repository = "https://github.com/yingkitw/rag"

[lib]
name = "rag"
path = "src/lib.rs"

[[bin]]
name = "rag"
path = "src/main.rs"

[[bin]]
name = "rag-mcp-server"
path = "src/mcp_server.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["openai"]
openai = []
ollama = []

[[example]]
name = "simple_rag"
path = "examples/simple_rag.rs"